# pais-sdk-cli

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  pais.toml  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  ingestion-plan.md  ingestion.md  migration-0.3-to-0.4.md  v0.4-plan.md
src/pais/: __init__.py  client.py  config.py  errors.py  logging.py
src/pais/auth/: __init__.py  base.py  bearer.py  none.py  oidc_password.py
src/pais/cli/: __main__.py  _alias.py  _config_file.py  _config_writeback.py  _error_dump.py  _flags.py  _introspect.py  _kb_show.py  _landing.py  _output.py  _pickers.py  _profile_config.py  _prompts.py  _purge_progress.py  _recent.py  _splitter_preview.py  _templates.py  app.py  config_cmd.py  dev.py  doctor_cmd.py  ensure_cmd.py  ingest_cmd.py  interactive.py  logs_cmd.py  repro_cmd.py  shell_cmd.py  splitters_new_cmd.py  status_cmd.py  support_bundle_cmd.py
src/pais/cli/_workflows/: __init__.py  _base.py  bootstrap_toml.py  chat.py  cleanup.py  ingest_data.py  search.py  setup_agent.py  setup_kb.py
src/pais/dev/: __init__.py  ingest.py  markdown.py  split_suite.py  token_budget.py
src/pais/ingest/: __init__.py  contextual.py  registry.py  runner.py
src/pais/ingest/splitters/: __init__.py  _base.py  _test_suite_core.py  markdown_headings.py  passthrough.py  test_suite_arctic.py  test_suite_md.py  (+2 more)
src/pais/models/: __init__.py  agent.py  common.py  data_source.py  index.py  knowledge_base.py  mcp.py  openai_compat.py
src/pais/resources/: __init__.py  _base.py  agents.py  data_sources.py  indexes.py  knowledge_bases.py  mcp_tools.py  openai_compat.py
src/pais/transport/: __init__.py  base.py  fake_transport.py  httpx_transport.py
src/pais_mock/: __init__.py  __main__.py  behaviors.py  server.py  state.py
tests/: conftest.py  test_agent_create_index_id_cli.py  test_agent_create_wire_shape.py  test_agent_dump_and_diagnose.py  test_agent_index_id_contract.py  test_alias_resolver.py  test_auth.py  test_back_navigation.py  test_cancel_indexing.py  test_chat_request_wire_shape.py  test_cleanup.py  test_cli.py  test_cli_dev.py  test_cli_kb_list.py  test_config_file.py  test_config_writeback.py  test_doctor_cmd.py  test_error_dump.py  test_errors.py  test_index_delete_unsupported.py  test_ingest.py  test_ingest_runner.py  test_integration_seam.py  test_interactive_dispatch.py  test_interactive_hidden_param.py  test_interactive_introspect.py  test_interactive_pickers.py  test_interactive_trigger.py  test_kb_ensure.py  test_landing.py  test_logging.py  test_logging_quiet.py  test_logs_cmd.py  test_markdown_parser.py  test_mcp_tool_permissive.py  test_mcp_tools_resource_resilient.py  test_models_relaxed_enums.py  test_prompts.py  test_recent.py  test_repro_cmd.py  (+24 more)
tests/contract/: test_round_trip.py
tests/contract/fixtures/: agent.json  chat_completion.json  document.json  error_validation.json  index.json  indexing_done.json  knowledge_base.json  mcp_tool.json  model_list.json
tests/fixtures/test_suites/: Access-Management.md
