[project]
name = "pais-sdk-cli"
version = "0.7.2"
description = "Contract-first Python SDK + CLI for VMware Private AI Service (PAIS), with mock server for offline development"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "dshahnaz" }]
keywords = ["pais", "vmware", "private-ai", "sdk", "cli", "rag"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "typer>=0.12",
    "structlog>=24.1",
    "rich>=13.7",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "python-multipart>=0.0.9",
    "tomli>=2.0; python_version < '3.11'",
    "questionary>=2.0,<3",
    "tomli-w>=1.0",
]

[project.optional-dependencies]
keyring = ["keyring>=24.0"]
contextual = ["anthropic>=0.40"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-requests",
    "httpx[http2]",
    "pyyaml>=6.0",
    "types-pyyaml",
    "tokenizers>=0.15",
    "tomli>=2.0",
]

[project.scripts]
pais = "pais.cli.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pais", "src/pais_mock"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
# UP042: `str + Enum` pattern is intentional; we stringify enums in JSON
#        serialization and don't want StrEnum's behavior change.
ignore = ["E501", "UP042"]

[tool.ruff.lint.per-file-ignores]
# RUF012 mutable default on pydantic model fields — these are treated as
# Field(default_factory=...) at class construction and don't share state.
"src/pais/models/*.py" = ["RUF012"]
# B008: Typer requires `typer.Option(...)` and `typer.Argument(...)` as defaults
# — that's how it sees them. Hoisting to module-level constants is sometimes
# too rigid (e.g. when the option needs runtime-computed paths).
"src/pais/cli/*.py" = ["B008"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
files = ["src/pais", "src/pais_mock"]

[[tool.mypy.overrides]]
module = ["pais.cli.*"]
strict = false

[[tool.mypy.overrides]]
module = ["anthropic", "anthropic.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]
markers = [
    "live_mock: tests that require the uvicorn mock server to be running",
]

[tool.coverage.run]
source = ["src/pais"]
omit = ["src/pais/cli/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
